--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,12 @@
+server:
+  port: 8080
+  servlet:
+    context-path: /pricing-service
+
 spring:
   application:
     name: pricingms
+
   datasource:
     url: jdbc:h2:mem:pricingdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driver-class-name: org.h2.Driver
@@ -28,6 +34,13 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migration
+
+
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
 
 logging:
   level:
