--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.0'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'jacoco'
+	id 'checkstyle'
+	id 'com.github.kt3k.coveralls' version '2.12.0'
 }
 
 group = 'com.capitole.inditex'
@@ -12,6 +15,12 @@ java {
 		languageVersion = JavaLanguageVersion.of(17)
 	}
 }
+
+checkstyle {
+	toolVersion = '10.12.3'
+}
+
+apply from: "${rootDir}/quality.gradle"
 
 configurations {
 	compileOnly {
@@ -34,6 +43,7 @@ dependencies {
 	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0")
 	implementation("org.springdoc:springdoc-openapi-javadoc:1.8.0")
 	implementation("org.springdoc:springdoc-openapi-starter-common:2.7.0")
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
 
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -48,3 +58,8 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile) {
+	options.encoding = 'UTF-8'
+}
+
