--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -6,7 +6,7 @@ spring:
     password:
   flyway:
     enabled: true
-    locations: classpath:db/migration
+    locations: classpath:testdb/migration
     clean-disabled: false
     baseline-on-migrate: true
     validate-on-migrate: true
